fix: align home directions label

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2460,11 +2460,12 @@ body.home .site-footer .map-pulse {
     }
 
     .home-directions-header .section-label {
+        width: 201px;
         font-size: 20px;
         line-height: 1.3;
         font-weight: 400;
         color: #353535;
-        margin: 5px 0 0;
+        margin: 5px 0 0 auto;
         text-align: right;
     }
 
@@ -3488,11 +3489,12 @@ body.home .site-footer .map-pulse {
     }
 
     body.home .home-directions-header .section-label {
+        width: 201px;
         font-size: 20px;
         line-height: 1.3;
         font-weight: 400;
         color: #353535;
-        margin: 5px 0 0;
+        margin: 5px 0 0 auto;
         text-align: right;
     }
 
